--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
         "admin-lte": "^3.0.5",
-        "vue-router": "^3.3.4"
+        "vue-router": "^3.3.4",
+        "watch": "^1.0.2"
     }
 }
