--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.3.4",
+        "vue-the-mask": "^0.11.1",
         "watch": "^1.0.2"
     }
 }
